# Multiple_Neighborhood_Cellular_Automata

./: CMakeLists.txt  README.md
res/shaders/: fragment.glsl  zoom_and_pan.glsl
src/: main.cpp
